# Alfred

./: .gitignore  .replit  Dockerfile  README.md  app.py  ci_agent_server.py  config.py  docker-compose.yml  image-build.ps1  main.py  models.py  prometheus.yml  pyproject.toml  replit.nix  run_ci_agent.py  run_services.py  start.sh  test_ci_agent.py
agents/: README.md  __init__.py
agents/ci_agent/: Dockerfile  __init__.py  app.py  repo_analyzer.py  requirements.txt  routes.py  utils.py
agents/ci_agent/templates/: aspnet_service.groovy  csharp_library.groovy  java_maven.groovy  node_service.groovy  python.groovy  website.groovy
agents/deploy_agent/: Dockerfile  __init__.py  app.py  routes.py  smol_deploy_agent.py
agents/helm_agent/: Dockerfile  __init__.py  app.py  requirements.txt  smol_helm_agent.py
agents/utils/: __init__.py  logger.py
grafana/dashboards/: system_metrics.json
grafana/provisioning/datasources/: prometheus.yml
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: agents-deployment.yaml  agents-service.yaml  ingress.yaml  main-deployment.yaml  main-service.yaml
routes/: dashboard.py  simulation.py  task.py
services/: agent_router.py  ai_service.py  jira_service.py  simulator.py  task_validator.py
templates/: base.html  dashboard.html  dashboard.html.bak  task.html
utils/: logger.py  validators.py
